# image-processing

./: CMakeLists.txt  README.md
include/: Pixel.h
include/effects/: BlurEffect.h  DitheringEffect.h  Effect.h  GlitchEffect.h  GrayScaleEffect.h  InvertEffect.h  SepiaEffect.h
include/filetypes/: BMP.h  FileType.h  ImageType.h
include/loaders/: PluginLoader.h
src/: CMakeLists.txt  GlitchEffect.cpp  GlitchEffect.h  main.cpp
src/effects/: BlurEffect.cpp  CMakeLists.txt  DitheringEffect.cpp  GlitchEffect.cpp  GrayScaleEffect.cpp  InvertEffect.cpp  SepiaEffect.cpp
src/filetypes/: BMP.cpp  CMakeLists.txt
src/loaders/: CMakeLists.txt  PluginLoader.cpp
src/main/: CMakeLists.txt  main.cpp
